Fixed spacing issues

--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -50,7 +50,7 @@ body {
 .about-container {
   max-width: 800px;
   margin: auto;
-  padding: 30px 20px 0px 20px;
+  padding: 0px 20px 0px 20px;
 }
 
 .about-container h1 {
@@ -90,6 +90,7 @@ body {
 }
 
 .button-container {
+  margin-top: 3rem;
   text-align: center;
 }
 
